--- a/pixi.toml
+++ b/pixi.toml
@@ -1,12 +1,13 @@
 [project]
 authors = ["PaulKMueller <paul.mueller@quantco.com>"]
-channels = ["conda-forge", "https://conda.prod.quantco.cloud/get/qc-internal"]
+channels = ["conda-forge"]
 description = "Add a short description here"
 name = "open_qr"
 platforms = ["osx-arm64"]
 version = "0.1.0"
 
 [tasks]
+stream = "streamlit run main.py"
 
 [dependencies]
 streamlit = ">=1.39.0,<2"
